--- a/lawsystem/templates/advocateRegister.html
+++ b/lawsystem/templates/advocateRegister.html
@@ -67,7 +67,7 @@
     <input type="text"   name="address" required><br>
     
     <label for="email"><b>Email*</b></label>
-    <input type="text"  placeholder="---Enter email ex: rahul@gmail.com--"  name="email" required>
+    <input type="email"  placeholder="---Enter email ex: rahul@gmail.com--"  name="email" required>
     <br>
     <label for="username"><b>User Name*</b></label>
     <input type="text"   name="username" required>
