--- a/lawsystem/templates/clientRegister.html
+++ b/lawsystem/templates/clientRegister.html
@@ -46,7 +46,7 @@
     <label for="phno">Ph No.*</label>
     <input style="width: 50%;" type="tel" placeholder="----Enter Ph No. in 999-999-999 format---" name="phno" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"><br><br>
     <label for="email"><b>Email*</b></label>
-    <input type="text"  placeholder="---Enter email ex: rahul@gmail.com--"  name="email" required>
+    <input type="email"  placeholder="---Enter email ex: rahul@gmail.com--"  name="email" required>
     <br>
     <label for="username"><b>User Name*</b></label>
     <input type="text"   name="username" required>
