--- a/lawsystem/templates/caseStatus.html
+++ b/lawsystem/templates/caseStatus.html
@@ -4,6 +4,7 @@
         {%load static%}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cuprum&family=Odibee+Sans&display=swap" rel="stylesheet">
@@ -88,7 +89,7 @@ element.style {
   border: 4px solid #Fff;
   animation: loader 2s infinite ease;
 }
-.loader-inner {
+.loader-inner{
   vertical-align: top;
   display: inline-block;
   width: 100%;
@@ -112,7 +113,8 @@ element.style {
         </style>
         
     </head>
-    <body>
+    <body > 
+        
         {%csrf_token%}
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand">way2CMS</a>
@@ -139,8 +141,8 @@ element.style {
           </ul>
         </div>
       </nav><br><br><br>
-      <div>
-        <form  method=POST action="{% url 'caseStatus' %}" align="center"  class="status_form" style="margin-top:-5px;">
+    
+        <form  method=POST action="{% url 'caseStatus' %}" align="center"  class="form" style="margin-top:-5px;">
             {%csrf_token%}
             <h1> CASE DETAILS AND STATUS</h1>
             <br>
@@ -155,8 +157,8 @@ element.style {
             $(window).on("load",function(){
                 $(".loader-wrapper").fadeOut("slow");
             });
-            </script>
-        </div>
+        </script>
+      
       {% block content %}
       <br>
 <center>
@@ -266,14 +268,27 @@ element.style {
     </center>
     
     {% endblock %}
-{% if messages %}
+<!--{% if messages %}
   <ul class="messages">
       
       <p style="color: lightred;"><li  {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ messages }}</li></p>
       
   </ul>
-  {% endif %}
-  
+  {% endif %}-->
 
+  <script class="lazy" data-src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+      <script class="lazy" data-src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+      <script class="lazy" data-src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+      
+      {% for message in messages %}
+      <div class="container-fluid p-0">
+        <div class="alert {{ message.tags }} alert-dismissible" role="alert" >
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          {{ message }}
+        </div>
+      </div>
+      {% endfor %}
     </body>
 </html>
