--- a/lawsystem/templates/MyAdList.html
+++ b/lawsystem/templates/MyAdList.html
@@ -58,19 +58,37 @@
             position:static;
             border: none;
             color: white;
-            padding: 16px 32px;
+            padding: 10px;
             text-align: center;
             font-size: 16px;
             margin: 4px 2px;
             opacity: 0.6;
             transition: 0.3s;
-          height: 50px;
+
           width: 100px;
             text-decoration: none;
             cursor: pointer;
           }
 
           .removebtn:hover {opacity: 1}
+  .contactbtn {
+  display: inline-block;
+  border-radius: 4px;
+  background-color: #f16439;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 16px;
+  padding: 10px;
+  width: 100px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+  opacity: 0.6;
+ 
+}
+.contactbtn:hover {opacity: 1}
+
     </style>
 
   </head>
@@ -116,7 +134,7 @@
         <th>Experience</th>
         <th>Expertise</th>
         <th>Address</th>
-        <th></th>
+        <th>Actions</th>
       </tr>
         <tr>
           <td>{{id.first_name}} {{id.last_name}}</td>
@@ -129,7 +147,12 @@
           <form  method=POST action="{% url 'MyAdList' %}">
             {%csrf_token%}
           <button  type="submit" name="remove"  value='{{id.username}}' class="removebtn" >Remove</button>
-          </form></td>
+
+          </form>
+          <form  method=POST action="{% url 'MyAdList' %}">
+            {%csrf_token%}
+          <button class="contactbtn" style="vertical-align:middle" ><span>Contact </span></button></td>
+        </form>
         </tr>
         
       </table>
