--- a/lawsystem/templates/caseStatus.html
+++ b/lawsystem/templates/caseStatus.html
@@ -268,22 +268,16 @@ element.style {
     </center>
     
     {% endblock %}
-<!--{% if messages %}
-  <ul class="messages">
-      
-      <p style="color: lightred;"><li  {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ messages }}</li></p>
-      
-  </ul>
-  {% endif %}-->
 
   <script class="lazy" data-src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
       <script class="lazy" data-src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
       <script class="lazy" data-src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
       
       {% for message in messages %}
-      <div class="container-fluid p-0">
-        <div class="alert {{ message.tags }} alert-dismissible" role="alert" >
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <br>
+      <div class="container-fluid p-0" style="width:max-content;">
+        <div class="alert {{ message.tags }} alert-dismissible" role="alert" style="text-align: center;" >
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close" >
             <span aria-hidden="true">&times;</span>
           </button>
           {{ message }}
