--- a/lawsystem/templates/advocateHome.html
+++ b/lawsystem/templates/advocateHome.html
@@ -68,15 +68,15 @@
       </div>
           <div class="col-lg-6 mb-4">
               <div class="card" style="width: 85%; height: 80%; background-color: lightsalmon; box-shadow: 1px 1px 2px black;">
-                <img class="card-img-top" style="width: 100%; height: 65%;" src="{% static 'images/advocate.png' %}" alt="Card image cap">
+                <img class="card-img-top" style="width: 100%; height: 65%;" src="{% static 'images/clientRequests.jpg' %}" alt="Card image cap">
 
                   <div class="card-body">
-                      <h5 class="card-title">Hiring Request</h5>
+                      <h5 class="card-title">Client Requests</h5>
                       <p class="card-text">
                           You can check clients request here.
                       </p>
 
-                      <a href="#" class="btn btn-dark btn-sm">
+                      <a href="/clientRequests/" class="btn btn-dark btn-sm">
                           Go!
                       </a>
                       
