--- a/lawsystem/templates/MyClientList.html
+++ b/lawsystem/templates/MyClientList.html
@@ -86,6 +86,9 @@
               <a class="nav-link" href="/advocateHome/"><i class="fa fa-home" aria-hidden="true"></i>Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="/MyClientList/">My List</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="/clientRequests/">Client Requests</a>
             </li>
             <li class="nav-item dropdown">
@@ -106,31 +109,28 @@
         {% block content %}
         <br>
 <center>
-    {% if id %}
-      <h2>My List</h2>
+    {% if usernameList %}
+      <h2>My Client List</h2>
       <br>
     <table id="clientDetails">
       <tr>
         <th>Name</th>
         <th>Email</th>
         <th>Phone No</th>
-        <th></th>
+  
       </tr>
+      {% for id in usernameList%}
         <tr>
           <td>{{id.first_name}} {{id.last_name}}</td>
           <td>{{id.email}} </td>
           <td>{{id.phno}} </td>
-          <td>
-          <form  method=POST action="{% url 'MyAdList' %}">
-            {%csrf_token%}
-          <button  type="submit" name="remove"  value='{{id.username}}' class="removebtn" >Remove</button>
-          </form></td>
+      
         </tr>
-        
+        {% endfor %}
       </table>
       
     {% else %}
-    <h2>My List</h2>
+    <h2>My Client List</h2>
       <h5>Hey!. Nothing to display.</h5>
 
       <table id="clientDetails">
