--- a/lawsystem/templates/advocateHome.html
+++ b/lawsystem/templates/advocateHome.html
@@ -33,6 +33,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/MyClientList/">My Clients</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/clientRequests/">Client Requests</a>
+            </li>
             <li class="nav-item dropdown">
               <a  class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <i class="fa fa-user" aria-hidden="true"></i>  My Account
