--- a/lawsystem/templates/project.html
+++ b/lawsystem/templates/project.html
@@ -43,6 +43,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/MyAdList/">My List</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/confirmedAds/">Confirmed Advocates</a>
+            </li>  
 
             <li style="float: right;" class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
