--- a/lawsystem/templates/test.html
+++ b/lawsystem/templates/test.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
+<html lang="en">
 
-<html>
 
 <head>
-    {%load static%}
+ 
     <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script src="https://use.fontawesome.com/a48ffc1c86.js"></script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+
 <style>
 
 * {
@@ -191,13 +186,13 @@ width: 100%;
 }
 
 </style>
-
+{%load static%}
 </head>
 
 <body>
 
 <div class="header">
-    <img style="width: 90px; height: 50px; padding-right: 15px;" class="d-block w-80" src="{% static 'images/new_logo.PNG' %}" >
+    <img style="width: 190px; height: 80px; padding-right: 15px;" class="d-block w-80" src="{% static 'images/new_logo.PNG' %}" >
 <h1>My Website</h1>
 
 <p>Resize the browser window to see the effect.</p>
